# qaguru_18_DKudriavtseva

./: .env  .gitignore  README.md  conftest.py  pyproject.toml
reqres_schemas/: employees.py  main_type.py  registers.py
schemas/: employee_schema.py  reqres_schema.py
tests/: test_reqres.py  test_reqres_list_users.py  test_ui.py
utils/: redefenitions.py
